--- a/‎mainproject/templates/decision_tree.html
+++ b/‎mainproject/templates/decision_tree.html
@@ -37,10 +37,11 @@
     </div>
 
     <div class="chart-container">
-        <div id="plotly-chart">
+        <div id="graphviz-chart">
             <div class="loading-spinner"></div>
             <p class="loading-text">正在從伺服器載入並訓練模型...</p>
         </div>
+        
     </div>
 
     <div class="metrics-container">
