--- a/‎mainproject/templates/decision_tree.html
+++ b/‎mainproject/templates/decision_tree.html
@@ -107,13 +107,9 @@
                 <span class="info-label">預測目標：</span>
                 <span class="info-value" id="desc-target">--</span>
             </div>
-            <div class="info-item-full">
+            <div class="info-item">
                 <span class="info-label">使用特徵：</span>
                 <span class="info-value" id="desc-features">--</span>
-            </div>
-            <div class="info-item-full">
-                <span class="info-label">最佳參數 (GridSearch)：</span>
-                <span class="info-value" id="desc-params">--</span>
             </div>
         </div>
     </div>
