--- a/‎mainproject/templates/decision_tree.html
+++ b/‎mainproject/templates/decision_tree.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="tree-legend">
-        <h4>樹狀圖 (Graphviz) 圖例</h4>
+        <h4>圖例說明</h4>
         <div class="legend-grid">
             <div class="legend-item">
                 <span class="legend-box color-class-0"></span>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="tree-container">
-        <h3>決策樹模型結構 (動態生成)</h3>
+        <h3>決策樹模型</h3>
         <div id="graphviz-chart" class="loading">
             <div class="loading-spinner"></div>
             <p class="loading-text">正在從伺服器載入並產生「樹狀圖」...</p>
