完工!!!大概吧

--- a/‎mainproject/static/css/base.css
+++ b/‎mainproject/static/css/base.css
@@ -1,6 +1,5 @@
 :root {
-    --primary-color: #4E4F97;
-    --primary-color-darker: #3E3F7A;
+    --primary-color: #005CAF;
     --text-color-light: #ffffff;
     --nav-hover-bg: rgba(255, 255, 255, 0.1);
     --nav-hover-bg-darker: rgba(255, 255, 255, 0.2);
